test: expand coverage with snapshots, unit tests and new CI pipeline